Larger font on dropdaown menu gallery. Fixed brand on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,9 @@ main {
 	.navbar-brand-font h1 {
 		font-size: 25px;
 	}
+    .dropdown-menu .dropdown-item {
+    font-size: 13px;
+    }
 }
 
 
